--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/">home</a>
-    <a href="/contact me.html">ket noi với tôi</a>
+    <a href="./">home</a>
+    <a href="./contact_me.html"> contact me</a>
     <h1> du an 1</h1>
     <img src="img/th.jpg" width="300"><br>
     <hr>
