--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="./">home</a>
     <a href="./contact_me.html"> contact me</a>
     <h1> du an 1</h1>
-    <img src="img/th.jpg" width="300"><br>
+    <a href="./contact_me.html"><img src="img/th.jpg" width="300"><br></a>
     <hr>
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam.<br>
