--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="./contact_me.html"> contact me</a>
     <h1> du an 1</h1>
     <a href="./contact_me.html"><img src="img/th.jpg" width="300"><br></a>
+    <a href="./timhieusauhon.html">tìm hiểu sâu hơn</a>
     <hr>
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam.<br>
